group project commit

--- a/trails/src/App.css
+++ b/trails/src/App.css
@@ -84,3 +84,9 @@ table,tbody{
   display: flex;
   justify-content: space-between;
 }
+
+.error-msg{
+  color: red;
+  margin: 10px;
+  font-style: bold;
+}
